# stereo-calibration

./: .gitignore  CMakeLists.txt  README.md  calib_intrinsic.cpp  calib_stereo.cpp  corner_detect.cpp  read_images.cpp  undistort_rectify.cpp  visualize.py
python/: README.MD  read_images.py
scripts/: plot.py  visualize.py
